--- a/styles/style.css
+++ b/styles/style.css
@@ -15,12 +15,6 @@ body {
     padding: 0;
 }
 
-body nav ul li a {
-    font-family: 'Poppins', sans-serif;
-    font-weight: 600;
-    font-size: 1em;
-}
-
 a {
     text-decoration: none;
 }
@@ -50,6 +44,9 @@ header nav ul li {
 
 header nav ul li a {
     color: #080F0F;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
+    font-size: 1.2em;
 }
 
 header nav ul li a:hover {
@@ -68,6 +65,9 @@ header nav ul li a:hover {
     header nav ul li {
     display: flex;
 }
+    header nav ul li a {
+        font-size: 1em;
+    }
 }
 
 .opener {
@@ -127,7 +127,7 @@ header nav ul li a:hover {
     animation: rotation 20s infinite linear;
     display: flex;
     padding: 1em;
-    margin: 3em 4em 3em 8em;
+    margin: 3em 4em 3em 10em;
     width: 25em;
 }
 
@@ -220,3 +220,109 @@ section p {
     font-size: 1em;
 }
 
+
+
+.container{
+  padding: 1em 0;
+  float: left;
+  width: 50%;
+}
+
+@media screen and (max-width: 640px){
+  .container{
+    display: block;
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 900px){
+  .container{
+    width: 33.33333%;
+  }
+}
+
+.porto {
+    margin: 0 5em 0 5em;
+}
+
+@media screen and (max-width: 640px){
+  .porto {
+    margin: 0 2em 0 2em;
+  }
+}
+
+.content {
+  position: relative;
+  width: 90%;
+  max-width: 90%;
+  margin: auto;
+  overflow: hidden;
+}
+
+.content .content-overlay {
+  background: rgba(8,8,15,1);
+  position: absolute;
+  height: 99%;
+  width: 100%;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  opacity: 0;
+  -webkit-transition: all 0.4s ease-in-out 0s;
+  -moz-transition: all 0.4s ease-in-out 0s;
+  transition: all 0.4s ease-in-out 0s;
+}
+
+.content:hover .content-overlay{
+  opacity: 1;
+}
+
+.content-image{
+  width: 100%;
+}
+
+.content-details {
+  position: absolute;
+  text-align: center;
+  padding-left: 1em;
+  padding-right: 1em;
+  width: 100%;
+  top: 50%;
+  left: 50%;
+  opacity: 0;
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  -webkit-transition: all 0.3s ease-in-out 0s;
+  -moz-transition: all 0.3s ease-in-out 0s;
+  transition: all 0.3s ease-in-out 0s;
+}
+
+.content:hover .content-details{
+  top: 50%;
+  left: 50%;
+  opacity: 1;
+}
+
+.content-details h3{
+  color: #16db93;
+  letter-spacing: .15em;
+  margin-bottom: .5em;
+  text-transform: uppercase;
+  font-family: 'Lora', serif; 
+  font-weight: 600;
+  font-size: 1.4em;
+}
+
+.content-details p{
+  font-family: 'Poppins', sans-serif; 
+  font-weight: 400;
+  color: #fff;
+  font-size: 0.8em;
+  padding: 1.5em;
+}
+
+.fadeIn-bottom{
+  top: 80%;
+}
